--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,9 @@
 name=StaticServo
-version=1.0.1
+version=1.0.2
 author=Timo Meyer
 maintainer=Timo Meyer
 sentence=A Small Arduino Library to save Min, Max and Home of a servo and set the servo between Min and Max by 0 and 1 (float)
+paragraph=A Small Arduino Library to save Min, Max and Home of a servo and set the servo between Min and Max by 0 and 1 (float)
 category=Device Control
 url=https://www.github.com/timoxd7/StaticServo
 architectures=*
